<resources>
    <string name="app_name">AdAway</string>
    <string name="no_root_description">Either the su binary could not be found or you
        did not allow root permission
        for AdAway.\n\nThis can happen when your device is not rooted.\nYou can
        find information
        about how to root your device on www.cyanogenmod.com
        or other Android websites.
    </string>
    <string name="button_exit">Exit</string>
    <string name="no_root_title">Rooted Android required</string>
    <string name="button_apply">Download files and apply ad blocking</string>
    <string name="no_connection">The connection to the internet is not working.
    </string>
    <string name="no_connection_title">No Connection</string>
    <string name="button_close">Close</string>
    <string name="download_dialog">Download:</string>
    <string name="menu_hosts_sources">Hosts sources</string>
    <string name="menu_about">About</string>
    <string name="apply_dialog">Apply</string>
    <string name="apply_dialog_hostnames">Parsing and merging hosts files</string>
    <string name="apply_dialog_hosts">Build hosts file</string>
    <string name="apply_dialog_apply">Apply hosts file</string>
    <string name="menu_preferences">Preferences</string>
    <string name="pref_download">General Preferences</string>
    <string name="pref_hosts">Hosts File</string>
    <string name="pref_redirection_ip">Redirection IP</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="revert_question">Do you really want to revert?</string>
    <string name="revert_successful">You reverted to the default hosts file.\nIt may
        be necessary to reboot
        Android for the changes to take
        effect.\n\nDo you
        want to reboot?\n(To prevent data loss make
        sure no app uses the
        sdcard at the moment!)
    </string>
    <string name="button_revert">Disable ad blocking</string>
    <string name="apply_success">Applying was successfull.\nIt may be necessary
        to reboot Android for the
        changes to take effect.\n\nDo you want
        to reboot?\n(To prevent data loss make sure no app
        uses the
        sdcard at the moment!)
    </string>
    <string name="about_description">AdAway is an open source ad blocker for Android.
    </string>
    <string name="about_license">License: GPL v3</string>
    <string name="about_url">http://code.google.com/p/ad-away/</string>
    <string name="about_version">Version:</string>
    <string name="no_root_url">http://www.cyanogenmod.com</string>
    <string name="about_title">About</string>
    <string name="apply_fail">Applying the hosts file to your system
        failed!\nTry changing the
        target hosts
        file in
        preferences to /data/data/hosts.
    </string>
    <string name="apply_fail_title">Applying failed</string>
    <string name="revert_problem">Reverting failed.</string>
    <string name="menu_add">Add</string>
    <string name="menu_add_qrcode">Add by scanning QR code</string>
    <string name="no_url">This is not a valid URL!</string>
    <string name="no_url_title">Malformed URL</string>
    <string name="button_add">Add</string>
    <string name="hosts_add_dialog">Input URL to hosts file:</string>
    <string name="checkbox_list_add_dialog_title">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="hosts_add_dialog_input">http://</string>
    <string name="checkbox_list_empty">Empty list</string>
    <string name="checkbox_list_empty_text">You can add items from the menu.</string>
    <string name="checkbox_list_context_delete">Delete</string>
    <string name="checkbox_list_footer">After adding new items to this list you have to apply AdAway again!
    </string>
    <string name="app_subtitle">Ad blocker</string>
    <string name="button_apply_text">All hosts files from the defined sources are
        downloaded, merged with your own
        lists and installed
        as one hosts file on your system.
    </string>
    <string name="button_revert_text">Restores the default hosts file on your system.
    </string>
    <string name="no_sources_title">No Sources defined</string>
    <string name="no_sources">Please add hosts sources to your list.</string>
    <string name="checkbox_list_edit_dialog_title">Edit</string>
    <string name="button_save">Save</string>
    <string name="checkbox_list_context_title">Edit Entry</string>
    <string name="checkbox_list_context_edit">Edit</string>
    <string name="no_hostname">This is not a valid hostname!</string>
    <string name="no_hostname_title">Malformed hostname</string>
    <string name="lists_tab_whitelist">Whitelist</string>
    <string name="lists_tab_blacklist">Blacklist</string>
    <string name="apply_dialog_lists">Applying Blacklist and Whitelist</string>
    <string name="lists_tab_redirection_list">Redirection List</string>
    <string name="list_dialog_url">URL:</string>
    <string name="list_dialog_hostname">Hostname:</string>
    <string name="list_dialog_ip">IP (IPv4 or IPv6):</string>
    <string name="no_ip">This is not a valid IP!</string>
    <string name="no_ip_title">Malformed IP</string>
    <string name="download_fail">Either you are not properly connected to the Internet or one of the hosts
        sources you
        want to download is
        not available. Please check
        the following URL and change it in
        your hosts
        sources:
    </string>
    <string name="download_fail_title">Download failed</string>
    <string name="no_private_file">Private file can not be created.</string>
    <string name="no_private_file_title">Private file creation failed</string>
    <string name="status_checking">Checking for update...</string>
    <string name="status_checking_subtitle">Checking if update is available</string>
    <string name="status_update_available">Update available</string>
    <string name="status_update_available_subtitle">Newer hosts files available</string>
    <string name="status_no_connection">No internet connection</string>
    <string name="status_no_connection_subtitle">No internet connection available</string>
    <string name="status_download_fail">Unavailable source</string>
    <string name="status_download_fail_subtitle">URL: </string>
    <string name="status_enabled">Enabled</string>
    <string name="status_enabled_subtitle">Newest hosts files enabled</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_disabled_subtitle">Disabled</string>
    <string name="about_icons">Some icons are taken from \'Dropbox Emblems
        Tango
        by Charles A.\' and
        \'www.androidicons.com\', both licensed
        under Creative Commons
        Attribution 3.0
        Unported
        License.
    </string>
    <string name="no_busybox">The Busybox binary could not be found. To
        install
        it from the Android Market
        click the Button below.
    </string>
    <string name="no_busybox_title">No Busybox binary</string>
    <string name="button_busybox">Install Busybox</string>
    <string name="pref_update_check">Check for updates</string>
    <string name="pref_apply_method">Target hosts file</string>
    <string name="pref_apply_method_summary">Before changing this setting, read Help about this functionality.
    </string>
    <string name="pref_redirection_ip_summary">All blocked hostnames are redirected to this IP
        address.
    </string>
    <string name="donations_description">Do you find this application useful? Support
        it\'s
        development by flattring
        it!
    </string>
    <string name="donations_title">Donations</string>
    <string name="menu_donations">Donations</string>
    <string name="donations_url">http://flattr.com/thing/369138/AdAway-Ad-blocker-for-Android
    </string>
    <string name="apply_symlink_missing">Symlink from /data/data/hosts to
        /system/etc/hosts
        is not existing! AdAway
        will not work if it is
        not existing.\n\nDo you
        want to try creating a symlink?
    </string>
    <string name="apply_symlink_missing_title">Symlink missing</string>
    <string name="apply_not_enough_space">Not enough space on the partition!\nTry changing the
        target hosts file in
        preferences to /data/data/hosts.
    </string>
    <string name="apply_not_enough_space_title">Not enough space</string>
    <string name="apply_private_file_fail">Downloaded file could not be read.</string>
    <string name="apply_private_file_fail_title">Private file fail</string>
    <string name="apply_remount_fail">Remouting the partition as read/write failed!
    </string>
    <string name="apply_remount_fail_title">Remount failed</string>
    <string name="apply_copy_fail">Copying of hosts file failed!</string>
    <string name="apply_copy_fail_title">Copy failed</string>
    <string name="apply_success_title">Applying successful</string>
    <string name="revert_successful_title">Reverting successful</string>
    <string name="apply_symlink_successful">Symlink was created successful.\nIt may be
        necessary to reboot Android for
        the changes to take
        effect.\n\nDo you
        want to reboot?\n(To prevent data loss make
        sure no app
        uses the
        sdcard
        at the moment!)
    </string>
    <string name="apply_symlink_successful_title">Symlink creation successful</string>
    <string name="apply_symlink_fail">Symlink could not be created by Android.\nThis
        fails mostly due to a
        \'feature\' called S-ON on HTC
        phones!\n\nA
        solution is to boot your phone into recovery mode
        and create the
        symlink there with \'ln -s /data/data/hosts
        /system/etc/hosts\'.\n\nIf
        this does
        not work search the internet
        for S-OFF and your phone.
    </string>
    <string name="apply_symlink_fail_title">Symlink creation failed</string>
    <string name="pref_header_preferences">Preferences</string>
    <string name="pref_header_preferences_summary">General preferences for AdAway</string>
    <string name="menu_help">Help</string>
    <string name="menu_lists">Your Lists</string>
    <string name="lists_tab_blacklist_short">Black</string>
    <string name="lists_tab_whitelist_short">White</string>
    <string name="lists_tab_redirection_list_short">Redirection</string>
    <string name="menu_refresh">Refresh</string>
    <string name="help_tab_faq">FAQ</string>
    <string name="help_tab_problems">Problems</string>
    <string name="button_webserver_toggle_checked">Webserver is running</string>
    <string name="button_webserver_toggle_unchecked">Webserver is not running</string>
    <string name="button_webserver_toggle_text">Start or stop webserver on localhost to answer requests to blocked
        hostnames.
    </string>
</resources>