<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_hosts_sources"
        android:title="@string/menu_hosts_sources">
    </item>
    <item
        android:id="@+id/menu_lists"
        android:title="@string/menu_lists">
    </item>
    <item
        android:id="@+id/menu_show_hosts_file"
        android:title="@string/menu_show_hosts_file">
    </item>
    <item
        android:id="@+id/menu_tcpdump"
        android:title="@string/menu_tcpdump">
    </item>
    <item
        android:id="@+id/menu_preferences"
        android:title="@string/menu_preferences">
    </item>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about">
    </item>
    <item
        android:id="@+id/menu_donations"
        android:title="@string/menu_donations">
    </item>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/action_refresh"
        android:showAsAction="always"
        android:title="@string/menu_refresh">
    </item>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/action_help"
        android:showAsAction="always"
        android:title="@string/menu_help">
    </item>

</menu>