<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical">
    <ToggleButton
        android:text="Webserver ToggleButton"
        android:id="@+id/webserver_fragment_toggle_button"
        android:onClick="webserverOnClick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/button_webserver_toggle_unchecked"
        android:textOn="@string/button_webserver_toggle_checked"></ToggleButton>
    <TextView
        android:text="@string/button_webserver_toggle_text"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:layout_weight="1"></TextView>
</LinearLayout>