<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:padding="5dp"
        android:onClick="applyOnClick">
        <FrameLayout
            android:id="@+id/status_layout"
            android:layout_marginRight="6dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <ProgressBar
                android:id="@+id/status_progress"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"></ProgressBar>
            <ImageView
                android:src="@drawable/status_update"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/status_icon"
                android:visibility="gone"></ImageView>
        </FrameLayout>
        <TextView
            android:id="@+id/status_subtitle"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_toRightOf="@id/status_layout"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:ellipsize="marquee" />
        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/status_layout"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_above="@id/status_subtitle"
            android:layout_alignWithParentIfMissing="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center_vertical" />
    </RelativeLayout>

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/apply_button"
        android:text="@string/button_apply"
        android:onClick="applyOnClick"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"></Button>
    <TextView
        android:text="@string/button_apply_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:textAppearance="@android:style/TextAppearance.Small"></TextView>
    <Button
        android:id="@+id/revert_button"
        android:layout_height="wrap_content"
        android:text="@string/button_revert"
        android:onClick="revertOnClick"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"></Button>
    <TextView
        android:text="@string/button_revert_text"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Small"></TextView>
</LinearLayout>